--- a/src/js/plugins/navigationBar/jquery.navigationBar.css
+++ b/src/js/plugins/navigationBar/jquery.navigationBar.css
@@ -28,3 +28,69 @@
 .yamoo9-navigation-bar .on > .menu {
 	display: block;
 }
+
+nav.horizontal {
+	float: left;
+}
+
+nav.horizontal a {
+	color: #313233;
+	text-decoration: none;
+}
+
+nav.horizontal .lv-1 > li > a {
+	font-size: 16px;
+	font-weight: bold;
+	padding-bottom: 2px;
+	border-bottom: 3px solid transparent;
+}
+
+nav.horizontal .lv-1 > li > a:hover,
+nav.horizontal .lv-1 > li > a:focus {
+	border-bottom: 3px solid #34c0ff;
+}
+
+nav.horizontal ul {
+	list-style: none;
+	padding-left: 0;
+	float: left;
+}
+
+nav.horizontal li {
+	float: left;
+	position: relative;
+	padding: 0 2px;
+}
+
+nav.horizontal .lv-1 > .on {
+	padding-bottom: 30px;
+}
+
+nav.horizontal a {
+	display: block;
+	padding: 8px 10px;
+}
+
+nav.horizontal a:hover,
+nav.horizontal a:focus {
+	color: #34C0FF;
+	font-weight: bold;
+}
+
+nav.horizontal a:focus {
+	outline: none;
+}
+
+nav.horizontal .lv-2 {
+	position: absolute;
+	width: 600px;
+	top: 34px;
+}
+
+nav.horizontal .o2 {
+	left: -55px;
+}
+
+nav.horizontal .o3 {
+	left: -125px;
+}
